# starkhacks

./: .env.example  .gitignore  DEVPOST_ANSWERS.md  PROJECT_OVERVIEW.md  README.md  moon.py
astrodex/: .gitignore  CMakeLists.txt  README.md
astrodex/cmake/: CompilerOptions.cmake  Dependencies.cmake
astrodex/configs/: solar_system.json
astrodex/scripts/: batch_generate.py  gen_star_lod.py  gen_star_octree.py  gen_starmap.py
astrodex/shaders/: atmosphere.frag  atmosphere.vert  galaxy.frag  galaxy.vert  planet.frag  planet.vert  planet_ai.frag  planet_pbr.frag  planet_pbr.vert  planet_unified.frag  planet_unified.vert  sphere.frag  sphere.vert  star.frag  star.vert  starfield.frag  starfield.vert  terrain.frag  terrain.tcs  terrain.tes  terrain.vert
astrodex/src/: main.cpp
astrodex/src/ai/: BedrockClient.cpp  BedrockClient.hpp  GeminiClient.cpp  GeminiClient.hpp  GroqClient.cpp  GroqClient.hpp  ImageGenerator.cpp  ImageGenerator.hpp  InferenceEngine.cpp  InferenceEngine.hpp  JimmyClient.cpp  JimmyClient.hpp  PromptTemplates.hpp
astrodex/src/config/: PresetManager.cpp  PresetManager.hpp  SystemConfig.cpp  SystemConfig.hpp
astrodex/src/core/: Application.cpp  Application.hpp  Logger.cpp  Logger.hpp  Window.cpp  Window.hpp
astrodex/src/data/: ExoMastClient.cpp  ExoMastClient.hpp  ExoplanetData.cpp  ExoplanetData.hpp  ExoplanetDataAggregator.cpp  ExoplanetDataAggregator.hpp  ExoplanetEuClient.cpp  ExoplanetEuClient.hpp  ExoplanetPredictor.cpp  ExoplanetPredictor.hpp  NasaApiClient.cpp  NasaApiClient.hpp
astrodex/src/explorer/: ExplorerUI.cpp  ExplorerUI.hpp  FreeFlyCamera.cpp  FreeFlyCamera.hpp  StarData.cpp  StarData.hpp  StarExplorerApp.cpp  StarExplorerApp.hpp  StarLOD.cpp  StarLOD.hpp  StarRenderer.cpp  StarRenderer.hpp  main_explorer.cpp  star_lod_builder.cpp
astrodex/src/input/: GestureInput.cpp  GestureInput.hpp
astrodex/src/intro/: IntroAnimation.cpp  IntroAnimation.hpp
astrodex/src/physics/: CelestialBody.cpp  CelestialBody.hpp  Integrator.cpp  Integrator.hpp  Octree.cpp  Octree.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp
astrodex/src/render/: Camera.cpp  Camera.hpp  CubemapGenerator.cpp  CubemapGenerator.hpp  ExoplanetConverter.cpp  ExoplanetConverter.hpp  Galaxy3DRenderer.cpp  Galaxy3DRenderer.hpp  OrbitRenderer.cpp  OrbitRenderer.hpp  PlanetParameters.cpp  PlanetParameters.hpp  PlanetParams.cpp  PlanetParams.hpp  PlanetProfiles.hpp  PlanetThumbnailRenderer.cpp  PlanetThumbnailRenderer.hpp  PlanetTypes.hpp  Renderer.cpp  Renderer.hpp  RingRenderer.cpp  RingRenderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SphereMesh.cpp  SphereMesh.hpp  SphereRenderer.cpp  SphereRenderer.hpp  TextureLoader.cpp  TextureLoader.hpp
astrodex/src/render/terrain/: HeightmapCache.cpp  HeightmapCache.hpp  PlanetQuadtree.cpp  PlanetQuadtree.hpp  QuadtreeNode.cpp  QuadtreeNode.hpp  TerrainMesh.cpp  TerrainMesh.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp
astrodex/src/simulation/: Simulation.cpp  Simulation.hpp
astrodex/src/ui/: DataVisualization.cpp  DataVisualization.hpp  GalaxyView.cpp  GalaxyView.hpp  UIManager.cpp  UIManager.hpp
contribute/: README.md  docker-compose.yml  package-lock.json  package.json
contribute/anchor/: fallback-mint.ts
contribute/anchor/programs/astro-rewards/src/: lib.rs
contribute/api/: package-lock.json  package.json  server.js
contribute/init/: 01-schema.sql
contribute/web/: index.html  nginx.conf  package-lock.json  package.json
contribute/web/src/: App.tsx  index.css  main.tsx
contribute/web/src/components/: Nav.tsx
contribute/web/src/pages/: Landing.tsx  Leaderboard.tsx  Planet.tsx
docs/: PRD_solana_science.md  README.md  gesture-protocol.md
ios/: README.md  project.yml
ios/HoloGesture/: GestureStreamer.swift  HoloGestureApp.swift  Info.plist
laptop/: README.md  requirements.txt
laptop/gesture_receiver/: __init__.py  bonjour.py  gestures.py  receiver.py  test_receiver.py
laptop/hologram/: __init__.py  camera.py  main.py  quad_renderer.py  scene.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: prepare-assets.mjs
web/src/: board.js  board.ts  calibration.ts  game.js  game.ts  gestures.js  gestures.ts  main.js  main.ts  particles.js  particles.ts  sidePanel.js  sidePanel.ts
